@@ -1,3 +1,7 @@
+2009-04-27  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/generic/bdiv_dbm1c.c: Handle nails.
+
 2009-04-26  Torbjorn Granlund  <tege@gmplib.org>
 
 	* config.guess: Recognize more POWER processor types.
